<resources>
    <string name="app_name">Registro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- DRAWER -->
    <string name="agenda">Agenda</string>
    <string name="medie">Voti</string>
    <string name="share">Condividi</string>
    <string name="send">Contattaci</string>
    <string name="communicate">Communicate</string>
    <string name="justifications">Assenze</string>
    <string name="communications">Comunicazioni</string>
    <string name="schedule">Orario</string>
    <string name="lessons">Lezioni</string>
    <string name="note">Note</string>
    <string name="settings">Impostazioni</string>
    <string name="files">Materiale didattico</string>
    <string name="incoming_events">Prossimi eventi</string>
    <string name="tomorrow">Domani</string>
    <string name="this_week">Questa settimana</string>

    <!--ERRORI-->
    <string name="nointernet">Non sei connesso ad internet!</string>

    <string name="share_with">Condividi con</string>

    <string name="dettaglio_voti_titolo">Dettaglio voti</string>
    <string name="dettaglio_voti_desc">Nel tab voti clicca su una scheda per visualizzare i commenti dei voti</string>
    <string name="agenda_titolo">Agenda</string>
    <string name="agenda_desc">Nell\'agenda le verifiche vengono indicate con dei pallini rossi, mentre i compiti con dei pallini gialli</string>
    <string name="ultima_cosa_titolo">Un ultima cosa</string>
    <string name="ultima_cosa_desc">Abbiamo bisogno dei permessi di archiviazione per scaricare le circolari e i file dalla didattica</string>
    <string name="sei_pronto_titolo">Sei pronto!</string>
    <string name="sei_pronto_desc">Ora sei pronto per utilizzare al meglio quest app. Ricorda, per qualsiasi problema contattaci a registroelettronico@simoneluconi.com</string>
    <string name="media_ipotetica_desc">oppure tieni premuto per visualizzare la media ipotetica</string>
    <string name="intro_app_desc">Verrai introdotto ad alcune funzionalità dell\'app.</string>
    <string name="dettagli_medie_titolo">Dettaglio medie</string>
    <string name="dettaglio_media_desc">Nei primi tre tab premi sulla scheda di una materia per visualizzare il dettaglio delle medie</string>
    <string name="media_ipotetica_titolo">Media ipotetica</string>
    <string name="benvenuto">Benvenuto!</string>
    <string name="login">Login</string>
    <string name="login_msg">Login riuscito</string>
    <string name="password">Password</string>
    <string name="caricamento">Caricamento…</string>
    <string name="login_msg_failer">Login fallito (%1$s)</string>
    <string name="absences">Assenze</string>

    <string name="mail_user">Email o Username</string>
    <string name="login_riuscito">Login completato</string>
    <string name="download_in_corso">Download in corso…</string>
    <string name="open">Apri</string>
    <string name="missing_app">Nessuna app può aprire questo file (%1$s)</string>
    <string name="file_downloaded">%1$s scaricato</string>
    <string name="download_fallito">Download fallito (%1$s)</string>
    <string name="materia">Materia</string>
    <string name="professore">Professore</string>
    <string name="aula">Aula</string>
    <string name="mostra_grafico">Mostra grafico</string>
    <string name="i_tuoi_voti">I tuoi voti</string>
    <string name="i_tuoi_voti_ipotetici">I tuoi voti ipotetici</string>

    <plurals name="days">
        <item quantity="one">Assente tutto il giorno</item>
        <item quantity="other">Assente %d giorni</item>
    </plurals>

    <string name="verifiche">Verifiche</string>
    <string name="altri_eventi">Altri Eventi</string>
    <string name="nessun_voto_numerico">Nessun voto numerico</string>

    <string name="short_delay">Ritardo breve</string>
    <string name="hours">Sei %1$s alla %2$dª ora</string>

    <string name="free_day">Giornata libera!</string>
    <string name="today_at_school">Oggi a scuola</string>
    <string name="your_averages">Le tue medie</string>
    <string name="orale">Orale</string>
    <string name="scritto">Scritto</string>
    <string name="pratico">Pratico</string>
    <string name="lezioni_recenti">Lezioni recenti</string>
    <string name="mostra_tutti">Mostra Tutti</string>
    <string name="your_average">Media complessiva</string>
    <string name="your_target">Il tuo obiettivo</string>
    <string name="dettagli">Dettagli</string>
    <string name="imposta">Imposta</string>
    <string name="edit">Modifica</string>

    <string name="senza_nome">Senza nome</string>

    <string name="ok">OK</string>
    <string name="today">Oggi</string>
    <string name="not_set">Selezionare un\'opzione</string>

    <!-- Settings -->
    <string name="obiettivo_summary">Seleziona il voto da usare come obiettivo</string>
    <string name="obiettivo_title">Obiettivo</string>

    <string name="start_tab_summary">Seleziona il tab di partenza</string>
    <string name="start_tab_title">Tab di partenza</string>

    <string name="class_summary">Seleziona la classe del profilo corrente</string>
    <string name="class_tab_title">Classe</string>

    <string name="restore_archived_summary">Ripristina tutti i dati archiviati dalla sezione agenda</string>
    <string name="restore_archived_title">Ripristina dati archiviati</string>
    <string name="ordina">Ordina</string>
    <string name="nome_bs">Nome</string>
    <string name="media_bs">Media</string>
    <string name="nvoti_bs">Numero di voti</string>
    <string name="media_dec_bs">Media - Decrescente</string>
    <string name="media_cre_bs">Media - Crescente</string>
    <string name="condividi_bs">Condividi</string>
    <string name="inserisci_calendario_bs">Inserisci nel calendario</string>
    <string name="copia_bs">Copia</string>
    <string name="archivia_bs">Archivia</string>
    <string name="compito_bs">Contrassegna come compito</string>
    <string name="cerca">Cerca</string>
    <string name="credenziali">Credenziali errate</string>
    <string name="huawei_text">Vuoi aggiungere l\'app fra le app protette in modo da ricevere notifiche?</string>
    <string name="huawei_headline">Aggiungere ad \'App protette\'?</string>

    <plurals name="notification_agenda">
        <item quantity="one">Un nuovo evento</item>
        <item quantity="other">%d nuovi eventi</item>
    </plurals>

    <plurals name="notification_voti">
        <item quantity="one">Un nuovo voto</item>
        <item quantity="other">%d nuovi voti</item>
    </plurals>

    <plurals name="notification_note">
        <item quantity="one">Una nuova nota</item>
        <item quantity="other">%d nuove note</item>
    </plurals>

    <plurals name="notification_communication">
        <item quantity="one">Una nuova comunicazione</item>
        <item quantity="other">%d nuove comunicazioni</item>
    </plurals>

    <string name="new_news">Ci sono novità</string>
    <string name="click_to_open">Clicca per aprire nell\'applicazione</string>

    <string name="do_not_ask_again">Non chiedermelo più</string>
    <string name="download_failed">File non scaricato</string>
    <string name="failed_to_open_link">Impossibile aprire il link richiesto</string>
    <string name="generale">Generale</string>
    <string name="aggiungi">Aggiungi</string>

    <string name="notification_new_grade">Hai preso %1$s in %2$s</string>
    <string name="notification_new_grade_blue">Hai preso %1$s (blu) in %2$s</string>
    <string name="abc">abc</string>
    <string name="dash">-</string>
    <string name="ordina_per">Ordina Per</string>
    <string name="applica_modifiche">Applica modifiche</string>
    <string name="voto">Voto</string>

    <string name="choose_color">Seleziona un colore</string>
    <string name="back">Indietro</string>
    <string name="custom">Personale</string>
    <string name="presets">Predefiniti</string>
    <string name="elimina">Elimina</string>
    <string name="restore_excluded_marks_summary">Ripristina tutti i voti esclusi dalle medie</string>
    <string name="restore_excluded_marks_title">Ripristina voti</string>
    <string name="voti">Voti</string>
    <string name="sync">Sincronizza</string>
    <string name="title_activity_choose_profile">Scegli un profilo</string>
    <string name="no_events">Non ci sono eventi per i prossimi giorni</string>
    <string name="configure">Scegli il profilo</string>
    <string name="no_lesson">Nessuna lezione in programma</string>
</resources>
