<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/agenda"
            android:icon="@drawable/ic_event"
            android:title="@string/agenda" />
        <item
            android:id="@+id/medie"
            android:icon="@drawable/ic_timeline_"
            android:title="@string/medie" />
        <item
            android:id="@+id/timetable"
            android:icon="@drawable/ic_grid_on"
            android:title="@string/timetable" />
        <item
            android:id="@+id/lessons"
            android:icon="@drawable/ic_view_agenda"
            android:title="@string/lessons" />
        <item
            android:id="@+id/files"
            android:icon="@drawable/ic_folder"
            android:title="@string/files" />
        <item
            android:id="@+id/absences"
            android:icon="@drawable/ic_supervisor"
            android:title="@string/absences" />
        <item
            android:id="@+id/notes"
            android:icon="@drawable/ic_error"
            android:title="@string/note" />
        <item
            android:id="@+id/communications"
            android:icon="@drawable/ic_assignment"
            android:title="@string/communications" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
