<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="8"
        android:entries="@array/voti_list"
        android:entryValues="@array/voti_list"
        android:key="voto_obiettivo"
        android:summary="@string/obiettivo_summary"
        android:title="@string/obiettivo_title" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/tab_list"
        android:entryValues="@array/tab_list_n"
        android:key="drawer_to_open"
        android:summary="@string/start_tab_summary"
        android:title="@string/start_tab_title" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/classi_list"
        android:entryValues="@array/classi_list"
        android:key="classe"
        android:summary="@string/class_summary"
        android:title="@string/class_tab_title" />

    <Preference
        android:key="clear_archive"
        android:summary="@string/restore_archived_summary"
        android:title="@string/restore_archived_title" />
    <Preference
        android:key="excluded_marks"
        android:summary="@string/restore_excluded_marks_summary"
        android:title="@string/restore_excluded_marks_title" />

    <PreferenceCategory
        android:key="notifiche_category"
        android:title="Notifiche">

        <Preference
            android:key="notify_settings"
            android:summary="Apri impostazioni delle notifiche"
            android:title="Notifiche" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="notify"
            android:summary="Ricevi notifiche relative all'account corrente"
            android:title="Notifiche" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notify"
            android:drawablePadding="8dp"
            android:icon="@drawable/ic_vibration_black_24dp"
            android:key="notify_vibrate"
            android:title="Vibrazione" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notify"
            android:drawablePadding="8dp"
            android:icon="@drawable/ic_volume_up_black_24dp"
            android:key="notify_sound"
            android:title="Suoni" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notify"
            android:key="notify_agenda"
            android:summary="Aggiornami se ci sono nuovi eventi"
            android:title="Agenda" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notify"
            android:key="notify_voti"
            android:summary="Aggiornami se ci sono nuovi voti"
            android:title="Voti" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notify"
            android:key="notify_comunicazioni"
            android:summary="Aggiornami se ci sono nuove comunicazioni"
            android:title="Comunicazioni" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notify"
            android:key="notify_note"
            android:summary="Aggiornami se ci sono nuove note"
            android:title="Note" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Informazioni">
        <Preference
            android:key="credits"
            android:summary="Conosci gli sviluppatori :)"
            android:title="Riconoscimenti" />

        <Preference
            android:key="attribution"
            android:summary="Librerie Open Source"
            android:title="Attribuzioni" />

    </PreferenceCategory>

</PreferenceScreen>
